--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
           </div>
         </div>
 
-        <p class="aboutme1">Hello, and welcome to my GIS portfolio website. I am a graduate student enrolled at Hunter College pursuing a Master of Science degree in GeoInformatics.</p>
-
+        <p class="aboutme1">Hi! I am a graduate student enrolled at Hunter College pursuing a Master of Science degree in GeoInformatics. Through my undergraduate studies, I have taken great interest in exploring geography through cartographic design, geospatial data analysis, coding and remote sesning.</p>
+        <p class="aboutme1">I am always learning more about the geography and technology fields and how they correlate with one another. In fact, this website was built to act as the final project for the introductory computer science course offered by Harvard University, cs50x. </p>
+        <p class="aboutme1"></p>
 
         <div class="footer">
             <img class="img1" src="newpaltzlogo.jpg" alt="The State University of New York at New Paltz is Jake's alma mater." title="State University of New York at New Paltz">
