--- a/contact.html
+++ b/contact.html
@@ -15,19 +15,27 @@
             <a class="btn btn-outline-light mr-4 ml-4" href="home.html" role="button">Home</a></button>
             <a class="btn btn-outline-light mr-4 ml-4" href="gisportfolio.html" role="button">GIS Portfolio</a></button>
             <a class="btn btn-outline-light mr-4 ml-4" href="contact.html" role="button">Contact</a></button>
-            <!--Create a github host site-->
           </div>
         </div>
 
-        <h2 class="contact">Contact me</h2>
-        <a class="ionbtn" href="https://www.linkedin.com/in/jake-dvorak-0b6160181/"><ion-icon name="logo-linkedin" title="Connect with me on LinkedIn"></ion-icon></button>
-        <a class="emailbtn" href="email.php"><ion-icon name="mail-outline" title="Send me an email"></ion-icon></button>
+<a class="fa fa-envelope-o" href="email.php"><button style="font-size:200px" title="Send me an email"></button>
+<!--fix this email button and add a github icon button too-->
+        
+        <div id="container">
+            <div id="main">
+                <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="vertical" data-theme="dark" data-vanity="jake-dvorak"><a class="LI-simple-link" href='https://www.linkedin.com/in/jake-dvorak?trk=profile-badge'>Jake Dvorak</a></div>
         <!--make a button icon for my github page too-->
+                <br>
+                <p style="text-align: center; margin-bottom: 150px"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d96558.26161512271!2d-73.28458005567181!3d40.86209264681213!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e83a4302f92fc3%3A0x1c89c04bdb222bde!2sSmithtown%2C%20NY!5e0!3m2!1sen!2sus!4v1595558626798!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></p>
+        <!--THIS IS THE MAP ABOVE-->
+            </div>
+        </div>
 
-        <div class="footer">
+        <footer id="footer">
             <img class="img1" src="newpaltzlogo.jpg" alt="The State University of New York at New Paltz is Jake's alma mater." title="State University of New York at New Paltz">
             <img class="img2" src="HUNTER-LOGO.jpg" alt="Jake is currently enrolled at Hunter College." title="Hunter College">
-        </div>
-        <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+            <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
+        </footer>
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </body>
 </html>
