--- a/gisportfolio.html
+++ b/gisportfolio.html
@@ -15,17 +15,21 @@
             <a class="btn btn-outline-light mr-4 ml-4" href="home.html" role="button">Home</a></button>
             <a class="btn btn-outline-light mr-4 ml-4" href="gisportfolio.html" role="button">GIS Portfolio</a></button>
             <a class="btn btn-outline-light mr-4 ml-4" href="contact.html" role="button">Contact</a></button>
-            <!--Create a github host site-->
           </div>
         </div>
 
+        <div id="container">
+            <div id="main">
         <p><a class="btn btn-primary btn-lg mt-5" href="Resume 2019.pdf" role="button">Resume</a></p>
 
         <p class="portdesc">This is where I will put the descriptions for each of my GIS projects.</p>
+            </div>
+        </div>
 
-        <div class="footer">
+        <footer id="footer">
             <img class="img1" src="newpaltzlogo.jpg" alt="The State University of New York at New Paltz is Jake's alma mater." title="State University of New York at New Paltz">
             <img class="img2" src="HUNTER-LOGO.jpg" alt="Jake is currently enrolled at Hunter College." title="Hunter College">
-        </div>
+            <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
+        </footer>
     </body>
 </html>
