--- a/home.html
+++ b/home.html
@@ -15,19 +15,22 @@
             <a class="btn btn-outline-light mr-4 ml-4" href="home.html" role="button">Home</a></button>
             <a class="btn btn-outline-light mr-4 ml-4" href="gisportfolio.html" role="button">GIS Portfolio</a></button>
             <a class="btn btn-outline-light mr-4 ml-4" href="contact.html" role="button">Contact</a></button>
-            <!--Create a github host site-->
           </div>
         </div>
 
-        <p class="aboutme1">Hi! I am a graduate student enrolled at Hunter College pursuing a Master of Science degree in GeoInformatics. Through my undergraduate studies, I have taken great interest in exploring geography through cartographic design, geospatial data analysis, coding and remote sesning.</p>
-        <p class="aboutme1">I am always learning more about the geography and technology fields and how they correlate with one another. In fact, this website was built to act as the final project for the introductory computer science course offered by Harvard University, cs50x. </p>
-        <p class="aboutme1"></p>
+        <div id="container">
+            <div id="main">
+                <p class="aboutme1">Hi! I am a graduate student enrolled at Hunter College pursuing a Master of Science degree in GeoInformatics. Through my undergraduate studies, I have taken great interest in exploring geography through cartographic design, geospatial data analysis, computer programming and remote sensing.</p>
+                <p class="aboutme1">I am always learning more about the geography and technology fields and how they correlate with one another. In fact, this website was built to act as the final project for the introductory computer science course offered by Harvard University, cs50x, which I completed in Summer 2020. </p>
+                <p class="aboutme1">put some sort of GIS related pics between the two paragraphs?</p>
+            </div>
+        </div>
 
-        <div class="footer">
+        <footer id="footer">
             <img class="img1" src="newpaltzlogo.jpg" alt="The State University of New York at New Paltz is Jake's alma mater." title="State University of New York at New Paltz">
             <img class="img2" src="HUNTER-LOGO.jpg" alt="Jake is currently enrolled at Hunter College." title="Hunter College">
-            <!--maybe instead of having the school logos, make an italicized sentence stating that this webpage was coded by Jake Dvorak using html, css, javascript... -->
-        </div>
+            <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
+        </footer>
     </body>
 </html>
 
