--- a/index.html
+++ b/index.html
@@ -4,32 +4,38 @@
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link href="styles.css" rel="stylesheet">
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <link href="hover-min.css" rel="stylesheet">
         <title>Jake Dvorak's GIS Portfolio</title>
     </head>
     <body>
         <div class="hero-image">
           <div class="hero-text">
             <img class="avatar" src="jake.png" alt="Avatar">
-            <h1>Jake Dvorak</h1>
+            <p class="head1">Jake Dvorak</p>
             <p>B.A. Geography</p>
-            <a class="btn btn-outline-light mr-4 ml-4" href="home.html" role="button">Home</a></button>
-            <a class="btn btn-outline-light mr-4 ml-4" href="gisportfolio.html" role="button">GIS Portfolio</a></button>
-            <a class="btn btn-outline-light mr-4 ml-4" href="contact.html" role="button">Contact</a></button>
+            <a class="hvr-underline-from-center" href="home.html" role="button">Home</a>
+            <a class="hvr-underline-from-center" href="gisportfolio.html" role="button">GIS Portfolio</a>
+            <a class="hvr-underline-from-center" href="contact.html" role="button">Contact</a>
           </div>
         </div>
-
         <div id="container">
             <div id="main">
                 <p class="aboutme1">Hi! I am a graduate student enrolled at Hunter College pursuing a Master of Science degree in GeoInformatics. Through my undergraduate studies, I have taken great interest in exploring geography through cartographic design, geospatial data analysis, computer programming and remote sensing.</p>
+                <br>
                 <p class="aboutme1">I am always learning more about the geography and technology fields and how they correlate with one another. In fact, this website was built to act as the final project for the introductory computer science course offered by Harvard University, cs50x, which I completed in Summer 2020. </p>
-                <p class="aboutme1">put some sort of GIS related pics between the two paragraphs?</p>
+                <br>
+                <p class="aboutme1">If you would like to see some of the work I have done, along with my resume, check out the <span style="color: #C92A2A">GIS Portfolio</span> page. If you would like to connect with me on LinkedIn or see my GitHub page, check out the <span style="color: #C92A2A">Contact</span> page.</p>
             </div>
         </div>
 
         <footer id="footer">
             <img class="img1" src="newpaltzlogo.jpg" alt="The State University of New York at New Paltz is Jake's alma mater." title="State University of New York at New Paltz">
             <img class="img2" src="HUNTER-LOGO.jpg" alt="Jake is currently enrolled at Hunter College." title="Hunter College">
+            <br>
+            <br>
             <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
+            <p class="footertext">This is a work in progress.</p>
         </footer>
     </body>
 </html>
