--- a/gisportfolio.html
+++ b/gisportfolio.html
@@ -54,7 +54,7 @@
                 <br>
                 <img class="portpic" src="test.png" title="Burials Found on Historic Huguenot St, New Paltz, NY">
                 <br>
-                <p class="portdesc">DESCRIPTION</p>
+                <p class="portdesc">During the first half of my senior year at New Paltz, I was asked to create a map using GIS for a professor of archaeology, prior to doing an independent study with the same professor. He had some data on burials that were discovered on Historic Hugenot Street in New Paltz, NY that he asked me to map out. ...............</p>
                 <br>
                 <br>
                 <br>
