--- a/gisportfolio.html
+++ b/gisportfolio.html
@@ -30,7 +30,7 @@
                 <br>
                 <img class="portpic" src="TIN1.gif" title="Triangle Irregular Network of Mohonk Preserve, NY">
                 <br>
-                <p class="portdesc">DESCRIPTION</p>
+                <p class="portdesc">Depicting Mohonk Mountain House and the Mohonk Preserve, this TIN was created as an assignment for a remote sensing class I took at New Paltz. The purpose of the TIN was to practice creating mosaics, hillshades and TINs from LIDAR data. The area depicted was perfect for the assignment as it is a staple of the New Paltz area and an area that had a lot of varying terrain.</p>
                 <br>
                 <br>
                 <br>
@@ -38,19 +38,31 @@
                 <br>
                 <img class="portpic" src="brochure (1).png" title="Village of New Paltz Visitor Brochure">
                 <br>
-                <p class="portdesc">DESCRIPTION</p>
+                <p class="portdesc">This brochure was an assignment for a cartography class I took at New Paltz. We were tasked with creating a walking tour brochure for the Village of New Paltz, as the village is a highly trafficked tourist spot, along with its surrounding areas. On the tour, I included parts of the college campus, shopping areas, nature spots and some of my favorite restaurants. Creating this brochure allowed me to get more creative with my GIS work.</p>
                 <br>
                 <br>
                 <br>
                 <img class="portpic" src="lab9.png" title="Environmental Characteristics of Ulster County, NY">
                 <br>
-                <p class="portdesc">DESCRIPTION</p>
+                <p class="portdesc">I created this environmental characteristics map while I worked as a teacher's assistant in an Intro to GIS class at New Paltz. The map depicts Ulster County, NY and features characteristics such as precipitation and temperature for the area, elevation, slope of the terrain and slope direction indicated by the south aspect inset and finally how much of the county's land is made up of forest. This environmental analysis taught me about DEMs and how to use the ArcGIS toolbox to build different visuals based on one set of raster data.</p>
                 <br>
                 <br>
                 <br>
-                <img class="portpic" src="test.png" title="Burials Found on Historic Huguenot St, New Paltz, NY">
+                <img class="portpic" src="alibaba.png" title="Mock Airline Poster">
                 <br>
-                <p class="portdesc">During the first half of my senior year at New Paltz, I was asked to create a map using GIS for a professor of archaeology, prior to doing an independent study with the same professor. He had some data on burials that were discovered on Historic Hugenot Street in New Paltz, NY that he asked me to map out. ...............</p>
+                <p class="portdesc">This mock airline poster was an assignment for a cartography class I took at New Paltz. The scenario surrounding the map was that we were to roleplay as cartographic consultants who were contacted by Alibaba Airlines to create an advertisement for them. This assignment taught me a lot about projections and symbology customization, which has helped me tremendously over the years.</p>
+                <br>
+                <br>
+                <br>
+                <img class="portpic" src="Exercise 6.jpg" title="The Geography of Me">
+                <br>
+                <p class="portdesc">Created in a GIS class I took at New Paltz, the geography of me map was one of my favorites from when I was still a beginner working with GIS. This project showcases my life geographically - places I've lived, where my parents were born, my commute to and from school, places I would like to visit, places I have visited and my ancestral roots. This map allowed me to explore using insets extensively.</p>
+                <br>
+                <br>
+                <br>
+                <img class="portpic" src="POI.png" title="Points of Interest in Ulster County, NY">
+                <br>
+                <p class="portdesc">Similar to the walking tour brochure, this map shows points of interest in Ulster County, NY. The county is filled by a hillshade, letting tourists know the terrain of the area, and other physical features like creeks and rivers are shown as well. The points of interest are in yellow, so the reader can easily find them. Almost every point is located in the heart of a different town, so that tourists can truly see what Ulster County has to offer.</p>
                 <br>
                 <br>
                 <br>
@@ -69,3 +81,4 @@
         </footer>
     </body>
 </html>
+
