--- a/gisportfolio.html
+++ b/gisportfolio.html
@@ -76,8 +76,8 @@
             <img class="img2" src="HUNTER-LOGO.jpg" alt="Jake is currently enrolled at Hunter College." title="Hunter College">
             <br>
             <br>
-            <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
-            <p class="footertext">This is a work in progress.</p>
+            <p class="footertext">This website was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
+            <p class="footertext">Work in progress.</p>
         </footer>
     </body>
 </html>
