--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
             <br>
             <br>
             <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
-            <p class="footertext">This is a work in progress.</p>
+            <p class="footertext">Work in progress.</p>
         </footer>
         <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     </body>
