--- a/home.html
+++ b/home.html
@@ -35,10 +35,8 @@
             <br>
             <br>
             <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
-            <p class="footertext">This is a work in progress.</p>
+            <p class="footertext">Work in progress.</p>
         </footer>
     </body>
 </html>
 
-<!--Make some kind of interactive tool on the website, make it more dynamic and fun.-->
-<!-- Change GIS portfolio to just portfolio and include remote sensing and other coursework projects??? -->
