--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <br>
             <br>
             <p class="footertext">This web page was programmed by Jake Dvorak using HTML, CSS, and JavaScript.</p>
-            <p class="footertext">This is a work in progress.</p>
+            <p class="footertext">Work in progress.</p>
         </footer>
     </body>
 </html>
-
-<!--Make some kind of interactive tool on the website, make it more dynamic and fun. maybe add an embedded map showing my location on the contact page!!!-->
