--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div id="container">
             <div id="main">
-                <p class="aboutme1">Hi! I am a graduate student enrolled at Hunter College pursuing a Master of Science degree in GeoInformatics. Through my undergraduate studies, I have taken great interest in exploring geography through cartographic design, geospatial data analysis, computer programming and remote sensing.</p>
+                <p class="aboutme1">Hi! I am a graduate student attending Hunter College pursuing a Master of Science degree in GeoInformatics. Through my undergraduate studies, I have taken great interest in exploring geography through cartographic design, geospatial data analysis, computer programming and remote sensing.</p>
                 <br>
                 <p class="aboutme1">I am always learning more about the geography and technology fields and how they correlate with one another. In fact, this website was built to act as the final project for the introductory computer science course offered by Harvard University, cs50x, which I completed in Summer 2020. </p>
                 <br>
