--- a/home.html
+++ b/home.html
@@ -25,7 +25,7 @@
                 <br>
                 <p class="aboutme1">I am always learning more about the geography and technology fields and how they correlate with one another. In fact, this website was built to act as the final project for the introductory computer science course offered by Harvard University, cs50x, which I completed in Summer 2020. </p>
                 <br>
-                <p class="aboutme1">If you would like to see some of the work I have done, along with my resume, check out the <span style="color: #C92A2A">GIS Portfolio</span> page. If you would like to connect with me on LinkedIn or see my GitHub page, check out the <span style="color: #C92A2A">Contact</span> page.</p>
+                <p class="aboutme1">If you would like to see some of the work I have done, along with my resume, check out the GIS Portfolio page. If you would like to connect with me on LinkedIn or see my GitHub page, check out the Contact page.</p>
             </div>
         </div>
 
