--- a/gisportfolio.html
+++ b/gisportfolio.html
@@ -23,7 +23,7 @@
 
         <div id="container">
             <div id="main">
-                <a class="hvr-icon-forward" href="Resume 2021.pdf" role="button">Resume   <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
+                <a class="hvr-icon-forward" href="" role="button">Resume   <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
                 <br>
                 <br>
                 <br>
