--- a/gisportfolio.html
+++ b/gisportfolio.html
@@ -27,6 +27,28 @@
                 <br>
                 <br>
                 <br>
+                <a class="hvr-icon-forward" href="https://arcg.is/05SOa1" role="button">Drive Time Analysis Interactive Dashboard   <i class="fa fa-chevron-circle-right hvr-icon"></i></a>
+                <br>
+                <br>
+                <br>
+                <br>
+                <img class="portpic" src="ActualFinal3.jpg" title="Statues of Historical Figures in Central Park, NYC">
+                <br>
+                <p class="portdesc">Depicting Central Park horizontally, this map shows the locations of the collection of statues of historical figures spread across the park. This map was made for an assignment for my first graduate level cartography course, where the objective was to show Central Park's elevation along with some feature located within the park.</p>
+                <br>
+                <br>
+                <br>
+                <img class="portpic" src="Assignment3good1.jpg" title="Family Income by Size Relative to the Median Family Income in 2017">
+                <br>
+                <p class="portdesc">This figure shows six choropleth maps of the United States depicting family income by size relative to the medican family income for each state in 2017. This figure was made for an assingment for my first graduate level cartography course, where the objective was to practice creating choropleth maps with national level census data.</p>
+                <br>
+                <br>
+                <br>
+                <img class="portpic" src="finalgood1.jpg" title="Shipwrecks in Puget Sound, Washington">
+                <br>
+                <p class="portdesc">As the final assignment in my first graduate level cartography course, I was tasked with creating a map of shipwrecks in Puget Sound, while highlighting something interesting about them. The figure shows a heatmap of shipwrecks in the Sound while describing how The 'Omar' very may have been sunk by a large rock lying in a shallow port area due to the wreck's close proximity to the rock.</p>
+                <br>
+                <br>
                 <br>
                 <img class="portpic" src="TIN1.gif" title="Triangle Irregular Network of Mohonk Preserve, NY">
                 <br>
